--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ h1 {
 	min-width: 100%;
 	height:200px;
 	margin: 0px;
-	padding-top: 1%;
 	font-family: 'Signika', "Franklin Gothic Bold", "Arial Black", sans-serif;
 }
 #navbar {
@@ -24,25 +23,31 @@ h1 {
 	display: inline-block;
 	color: white;
 	text-decoration: none;
+	max-width: 100%;
 }
 #navtabs li {
 	color: white;
 	display: inline;
-	font-size: 18.5px
-}
-#selected {
-	color: white;
-}
-li {
-	color: white;
-	padding-left: 41.3px;
-	padding-right: 41.3px;
+	font-size: 20px;
+	font-weight: bold;
+	padding-left: 29.7px;
+	padding-right: 29.7px;
 	border-right-color: white;
 	text-decoration: none;
+	background-color: white;
+	border-radius: 10px, 10px, 0px, 0px;
 }
+#navtabs li a {
+	text-decoration: none;
+}
+#navtabs #selected{
+	color: white;
+	background-color: gray;
+}
+
 #twitterlist {
 	position: absolute;
-    right: .7%;
+	right: .7%;
 }
 h2 {
 	color: rgb(85, 26, 139);
@@ -108,4 +113,11 @@ li {
 }
 #stateassembly span {
 	font-weight: bold;
+}
+footer {
+	width: 100%;
+	left:2%;
+	margin-bottom: 0px;
+	position: absolute;
+    min-height: 1px;
 }
