--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ h1 {
 	text-align: center;
 	color: white;
 	min-width: 100%;
-	height:200px;
+	height: 200px;
 	margin: 0px;
 	font-family: 'Signika', "Franklin Gothic Bold", "Arial Black", sans-serif;
 }
@@ -31,8 +31,8 @@ h1 {
 	display: inline;
 	font-size: 20px;
 	font-weight: bold;
-	padding-left: 29.7px;
-	padding-right: 29.7px;
+	padding-left: 2.1%;
+	padding-right: 2.1%;
 	border-right-color: white;
 	text-decoration: none;
 	background-color: white;
